syntax = "proto3";

option go_package = "github.com/wollac/autopeering/selection/proto";

package proto;

import "salt/proto/salt.proto";
import "peer/proto/service.proto";

message PeeringRequest {
  // string form of the recipient address
  string to = 1;
  // unix time
  int64 timestamp = 2;
  // salt of the requester
  Salt salt = 3;
  // services supported by the requester
  ServiceMap services = 4;
}

message PeeringResponse {
  // hash of the corresponding request
  bytes req_hash = 1;
  // response of a peering request
  bool status = 2;
  // services supported by the responding peer
  ServiceMap services = 3;
}

message PeeringDrop {
  // string form of the recipient address
  string to = 1;
  // unix time
  int64 timestamp = 2;
}
